commit tree ecd1692656e0a511130d813cb26561d4dd217d96

--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -1,6 +1,6 @@
 <h1>Sign Up Below:</h1>
 
-<form action='/registrations' method="name">
+<form action='/registrations' method="post">
     <label>name</label>
     <br/>
     <input type="text" name="name">
